Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70757

5.12 build fails on macOS 10.12.6

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12
    • 5.12
    • Network: SSL
    • None
    • macOS
    • 586650f81dc93c0b819df24d5bfd58f2f926b4ad

    Description

      Build fails as follows:

      Undefined symbols for architecture x86_64:
        "_SSLCopyALPNProtocols", referenced from:
            QSslSocketBackendPrivate::continueHandshake() in qsslsocket_mac.o
        "_SSLSetALPNProtocols", referenced from:
            QSslSocketBackendPrivate::initSslContext() in qsslsocket_mac.o
      ld: symbol(s) not found for architecture x86_64
      

      I have the latest Xcode and SDKs available for 10.12.6:

      From the config output:

        macOS version .......................... 10.12.6
        Xcode version .......................... 9.2
        Clang version .......................... Apple LLVM version 9.0.0 (clang-900.0.39.2)
        macOS SDK version ...................... 10.13.2
        macOS minimum deployment target ........ 10.12
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tpochep Timur Pocheptsov
            asm Andy M
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes